Fix overflow on cards

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -92,13 +92,15 @@ float: right;
 
 .single-card ul {
   // position:
-  display: inline-grid;
+  display: inline-grid;;
+  // font-size: -.75rem;
   border-radius: 10px;
-  margin: .5rem;
+  margin: .5rem .5rem;
   padding: 1rem;
+  // padding-bottom: auto;
   border: 5px;
   background-color: white;
-  height: 250px;
+  height: 300px;
   width: 150px;
   float: left;
   list-style-type: none;
@@ -106,9 +108,13 @@ float: right;
   overflow-y: auto;
 }
 
-.single-card li {
+.single-card ul li {
   margin: 5%;
+  text-overflow: ellipsis;
 
+  /* Required for text-overflow to do anything */
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .index-cards {
@@ -122,12 +128,12 @@ div.search-listings {
 }
 
 div.single-card ul li:hover {
-  z-index: 5;
+  z-index: 15;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
-  margin-top: -0.5%;
+  margin-top: -1%;
   // margin-bottom: 2.5%;
 }
 
